--- a/creRabbitmq/Dockerfile
+++ b/creRabbitmq/Dockerfile
@@ -15,9 +15,9 @@ ARG BUILD_TAG=latest
 
 # version: yyyy.n for stable versions / 0.yyyy for development
 ENV INITRD No
-ENV RABBITMQ_VERSION 3.8.0   # 3.6.0
+ENV RABBITMQ_VERSION 3.8.2   # 3.6.0
 
-
+ 
 LABEL Name="RabbitMQ for CRE" \
       CRE=$CRE_VERSION \ 
       Year=$BUILD_YEAR \
@@ -31,9 +31,9 @@ LABEL Name="RabbitMQ for CRE" \
 # https://computingforgeeks.com/how-to-install-latest-rabbitmq-server-on-ubuntu-linux/
 
 #sudo apt update && sudo apt install wget -y
-RUN apt install apt-transport-https -y
-RUN wget -O- https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc | sudo apt-key add -
-RUN wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
+RUN apt install apt-transport-https -y \
+ && wget -O- https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc | sudo apt-key add - \
+ && wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
 
 #--- Ubuntu 20.04 ---
 RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian focal erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
@@ -41,51 +41,28 @@ RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian focal erlang-22.x" |
 # --- Ubuntu 18.04 ---
 # RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian bionic erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
 
+RUN apt update  -y  && apt install  -y rabbitmq-server \
+ && rabbitmq-plugins enable rabbitmq_management
+
+# works
+# RUN rabbitmq-plugins list
+# RUN rabbitmq-diagnostics help
+# RUN rabbitmq-diagnostics status --help
+
+# to be done?
+## rabbitmqctl add_user "a-user" "a-pa$$w0rd"
 
 
-##RUN ls -l /usr/lib/rabbitmq/lib
-
-
-RUN apt update  -y  && apt install  -y rabbitmq-server
-
-RUN rabbitmq-plugins enable rabbitmq_management
-
-RUN rabbitmq-plugins list
-## RUN rabbitmq-plugins directories -s
-RUN rabbitmq-diagnostics help
-RUN rabbitmq-diagnostics status --help
-#rabbitmqctl add_user "a-user" "a-pa$$w0rd"
-RUN which rabbitmq-plugins
-#RUN rabbitmqctl environment
-
-
-#RUN ls -l /
-#RUN ls -l /usr
-#RUN ls -l /usr/local
-#RUN ls -l /usr/lib
-#RUN ls -l /usr/lib/rabbitmq
-#RUN ls -l /usr/lib/rabbitmq/autocomplete
-#RUN ls -l /usr/lib/rabbitmq/bin
-#RUN ls -l /usr/lib/rabbitmq/lib
-RUN ls -l /usr/lib/rabbitmq/lib/rabbitmq_server-3.8.2
-RUN ls -l /usr/lib/rabbitmq/lib/rabbitmq_server-3.8.2/plugins
-#RUN ls -l /var
-#RUN ls -l /var/local  #empty
-#RUN ls -l /var/lib
-#RUN ls -l /var/lib/rabbitmq
-#RUN ls -l /var/lib/rabbitmq/mnesia #empty
+# RUN ls -l /usr/lib/rabbitmq/lib
+# RUN ls -l /usr/lib/rabbitmq/lib/rabbitmq_server-3.8.2/plugins
 
 # node needs to run...
-#RUN rabbitmq-diagnostics environment
-#RUN rabbitmq-diagnostics erlang_version
+# RUN rabbitmq-diagnostics environment
+# RUN rabbitmq-diagnostics erlang_version
 
 COPY cre /cre
 WORKDIR /cre/
 ENV RABBITMQ_PLUGINS_DIR /cre/plugins:/usr/lib/rabbitmq/lib/rabbitmq_server-3.8.2/plugins
-
-#ENV RABBITMQ_PLUGINS_DIR /usr/lib/rabbitmq/lib/rabbitmq_server-version/plugins
-#ENV RABBITMQ_PLUGINS_DIR $RABBITMQ_HOME/plugins
-# PLUGINS_DIR
 
 # delay plugin     (3.8.9 -> 20.04?)
 # https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/download/3.8.9/rabbitmq_delayed_message_exchange-3.8.9-0199d11c.ez
@@ -94,10 +71,9 @@ ENV RABBITMQ_PLUGINS_DIR /cre/plugins:/usr/lib/rabbitmq/lib/rabbitmq_server-3.8.
 # https://dl.bintray.com/rabbitmq/community-plugins/3.6.x/rabbitmq_delayed_message_exchange/rabbitmq_delayed_message_exchange-20171215-3.6.x.zip  -> ez
 
 ## RUN wget https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/download/3.8.9/rabbitmq_delayed_message_exchange-3.8.9-0199d11c.ez -O /cre/plugins/rabbitmq_delayed_message_exchange.ez
-## RUN cp /cre/plugins/v3.6/rabbitmq_delayed_message_exchange.ez /cre/plugins/rabbitmq_delayed_message_exchange.ez
 
+RUN cp /cre/plugins/v3.8/rabbitmq_delayed_message_exchange-3.8.0.ez /cre/plugins/rabbitmq_delayed_message_exchange.ez 
 RUN rabbitmq-plugins enable rabbitmq_delayed_message_exchange
-
 
 EXPOSE 15672
 #EXPOSE 4369 5671 5672 15691 15692 25672
