--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -60,6 +60,8 @@ RUN python3 -m pip install ipywidgets
 
 RUN pip3 install jupyter-tensorboard
 RUN jupyter labextension install jupyterlab_tensorboard
+# https://github.com/QuantStack/jupyterlab-drawio/
+RUN jupyter labextension install jupyterlab-drawio
 RUN jupyter tensorboard enable
 
 # https://jupyterbook.org/intro.html
