add vips version

--- a/creImage/Dockerfile
+++ b/creImage/Dockerfile
@@ -48,7 +48,7 @@ RUN apt-get -y --no-install-recommends install imagemagick
 #https://libvips.github.io/libvips/API/current/Making-image-pyramids.md.html
 #https://openseadragon.github.io/examples/creating-zooming-images/
 #https://libvips.github.io/libvips/API/current/using-cli.html
-RUN apt-get -y --no-install-recommends install libvips-dev
+RUN apt-get -y --no-install-recommends install libvips-tools libvips-dev  
 
 
 #tesseract /home/kmicha/Pictures/frz.1863-06-03.02.jpg ./tess.hocr -l deu_frak -psm 1 hocr
@@ -60,9 +60,10 @@ RUN apt-get -y --no-install-recommends install libvips-dev
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \
    echo "$(date +'%F %R') \t creImage \t $XXX_VERSION" >> /cre/versions.txt && \
-   echo "$(date +'%F %R') \t  $(tesseract --version | grep tesseract)" >> /cre/versions.txt && \ 
-   echo "$(date +'%F %R') \t  Image Magick \t $(convert -version | grep Version)" >> /cre/versions.txt && \ 
-   echo "$(date +'%F %R') \t  $(latex --version | grep Debian)" >> /cre/versions.txt 
+   echo "$(date +'%F %R') \t \t $(tesseract --version | grep tesseract)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t \t $(convert -version | grep Version)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t \t $(vips -version)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t \t $(latex --version | grep Debian)" >> /cre/versions.txt 
 
 
 COPY cre /cre
