--- a/creRabbitmq/Dockerfile
+++ b/creRabbitmq/Dockerfile
@@ -29,16 +29,17 @@ LABEL Name="RabbitMQ for CRE" \
 # Install RabbitMQ
 
 # https://computingforgeeks.com/how-to-install-latest-rabbitmq-server-on-ubuntu-linux/
-
-#sudo apt update && sudo apt install wget -y
-RUN apt install apt-transport-https -y \
- && wget -O- https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc | sudo apt-key add - \
- && wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
+# https://www.rabbitmq.com/install-debian.html#apt
 
 #--- Ubuntu 20.04 ---
+RUN apt install apt-transport-https -y \
+ && wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add - 
 RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian focal erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
 
 # --- Ubuntu 18.04 ---
+# RUN apt install apt-transport-https -y \
+#  && wget -O- https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc | sudo apt-key add - \
+#  && wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
 # RUN echo "deb https://dl.bintray.com/rabbitmq-erlang/debian bionic erlang-22.x" | sudo tee /etc/apt/sources.list.d/rabbitmq.list
 
 RUN apt update  -y  && apt install  -y rabbitmq-server \
@@ -48,9 +49,6 @@ RUN apt update  -y  && apt install  -y rabbitmq-server \
 # RUN rabbitmq-plugins list
 # RUN rabbitmq-diagnostics help
 # RUN rabbitmq-diagnostics status --help
-
-# to be done?
-## rabbitmqctl add_user "a-user" "a-pa$$w0rd"
 
 
 # RUN ls -l /usr/lib/rabbitmq/lib
@@ -76,7 +74,11 @@ RUN wget https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/
 # RUN cp /cre/plugins/v3.8/rabbitmq_delayed_message_exchange-3.8.0.ez /cre/plugins/rabbitmq_delayed_message_exchange.ez 
 RUN rabbitmq-plugins enable rabbitmq_delayed_message_exchange
 
-EXPOSE 15672
+# https://www.rabbitmq.com/web-mqtt.html  ##port:15675
+RUN rabbitmq-plugins enable rabbitmq_mqtt
+RUN rabbitmq-plugins enable rabbitmq_web_mqtt
+
+EXPOSE 15672 15675
 #EXPOSE 4369 5671 5672 15691 15692 25672
 
 ENTRYPOINT ["/cre/rabbitmq-entrypoint.sh"]
