--- a/creIonic/Dockerfile
+++ b/creIonic/Dockerfile
@@ -27,7 +27,9 @@ RUN mkdir -p /cre/node/.npm-global
 RUN npm -g config set user root 
 
 #RUN npm install -g @ionic/cli cordova-res
-RUN npm install -g @ionic/cli 
+RUN npm install -g ionic 
+RUN npm install -g @ionic/vue 
+RUN npm install -g @ionic/vue-router
 
 #npm-install-peers
 
