--- a/creIonic/Dockerfile
+++ b/creIonic/Dockerfile
@@ -26,6 +26,7 @@ ENV PATH=$PATH:/cre/node/.npm-global/bin
 RUN mkdir -p /cre/node/.npm-global
 RUN npm -g config set user root 
 
+RUN npm uninstall -g ionic 
 RUN npm install -g @ionic/cli 
 RUN npm install -g cordova-res
 #RUN npm install -g ionic 
