--- a/creSpring/cre/maven-spring-boot/pom.xml
+++ b/creSpring/cre/maven-spring-boot/pom.xml
@@ -69,14 +69,23 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
 			<version>3.4.3</version>
 		</dependency>
-		<dependency>
+
+		<!-- dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-streams</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency -->
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
@@ -87,10 +96,6 @@
                         <artifactId>liquigraph-spring-boot-starter</artifactId>
                         <version>4.0.2</version>
                 </dependency-->
-		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka</artifactId>
-		</dependency>
                 <dependency>
 	                <groupId>org.projectlombok</groupId>
 	                <artifactId>lombok</artifactId>
