Spark Master & Worker initial install

--- a/creSpark/Dockerfile
+++ b/creSpark/Dockerfile
@@ -15,7 +15,8 @@ ARG BUILD_TAG=latest
 
 # version: yyyy.n for stable versions / 0.yyyy for development
 ENV INITRD No
-ENV SPARK_VERSION 2.3.3
+ENV SPARK_VERSION 3.0.0
+ENV HADOOP_VERSION=2.7
 
 LABEL Name="Spark for CRE" \
       CRE=$CRE_VERSION \ 
@@ -30,42 +31,45 @@ LABEL Name="Spark for CRE" \
 # https://archive.apache.org/dist/spark/spark-3.0.0/
 # https://archive.apache.org/dist/spark/spark-3.0.0/spark-3.0.0-bin-hadoop2.7.tgz
 
-curl -O https://www.apache.org/dyn/closer.lua/spark/spark-2.4.5/spark-2.4.5-bin-hadoop2.7.tgz
+# see https://www.kdnuggets.com/2020/07/apache-spark-cluster-docker.html
+
+RUN apt-get update -y && \
+    apt-get install -y curl && \
+    curl https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz -o spark.tgz && \
+    tar -xf spark.tgz && \
+    mv spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} /usr/bin/ && \
+    mkdir /usr/bin/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}/logs && \
+    rm spark.tgz
+
+ENV SPARK_HOME /usr/bin/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}
+ENV SPARK_MASTER_HOST spark-master
+ENV SPARK_MASTER_PORT 7077
+ENV PYSPARK_PYTHON python3
+
+
+ARG spark_master_web_ui=8080
+
+EXPOSE ${spark_master_web_ui} ${SPARK_MASTER_PORT}
+
+#MASTER:
+CMD bin/spark-class org.apache.spark.deploy.master.Master >> logs/spark-master.out
+
+#WORKER:
+#ARG spark_worker_web_ui=8081
+#EXPOSE ${spark_worker_web_ui}
+#CMD bin/spark-class org.apache.spark.deploy.worker.Worker spark://${SPARK_MASTER_HOST}:${SPARK_MASTER_PORT} >> logs/spark-worker.out
+
+# -- Runtime
+
+WORKDIR ${SPARK_HOME}
+#WORKDIR /cre/spring/app
 
 
 
-#https://spring.io/guides
-
-RUN mkdir -p /cre && touch /cre/versions.txt && \ 
-    echo "$(date +'%F %R') \t maven \t $(mvn -version)" >> /cre/versions.txt 
-
-#ENV JENKINS_HOME /var/jenkins
-
-COPY cre /cre
-WORKDIR /cre/
-
-#later move to entry-point - only init if not yet done.
-#RUN unzip /cre/maven-spring-boot.zip -d /cre/spring
-#RUN mv /cre/spring/app/src/main/java/com/example /cre/spring/app/src/main/java/com/cre
-RUN mkdir -p /cre/spring
-#RUN cp -R /cre/maven-spring-boot /cre/spring/app
-##RUN mv /cre/maven-spring-boot /cre/spring/app
-##RUN cp /cre/DemoApplication.java /cre/spring/app/src/main/java/com/cre/demo/DemoApplication.java
-
-#COPY cre/maven-spring-boot /cre/spring/app
-#COPY cre/DemoApplication.java /cre/spring/app/src/main/java/com/cre/demo/DemoApplication.java
-#RUN cd /cre/maven-spring-boot &&  mvn -N io.takari:maven:wrapper 
-RUN cd /cre/maven-spring-boot && ./mvnw clean install
-
-#  mvn install -DskipTests
-
-
-WORKDIR /cre/spring/app
-
-EXPOSE 8080 
+#EXPOSE 7077 
 
 # Define default command.
-ENTRYPOINT ["/cre/spring-entrypoint.sh"]
-CMD ["shoreman", "/cre/spring-procfile"]
+# ENTRYPOINT ["/cre/spark-entrypoint.sh"]
+# CMD ["shoreman", "/cre/spark-procfile"]
 
  
