--- a/crePython/Dockerfile
+++ b/crePython/Dockerfile
@@ -102,6 +102,9 @@ RUN apt-get -y --no-install-recommends install sbcl
 
 ## Julia: >=20.04
 RUN apt-get -y --no-install-recommends install julia 
+#Pkg.add("Spark.jl")
+#https://stackoverflow.com/questions/51272077/install-julia-packages-via-command-line/51273146
+RUN julia -e 'using Pkg; Pkg.add("Spark.jl")'
 
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
