--- a/creTensorflow/Dockerfile
+++ b/creTensorflow/Dockerfile
@@ -36,8 +36,9 @@ RUN pip3 install --upgrade pip
 RUN pip3 install tensorflow 
 RUN pip3 install tensorboard tensorboard_logger
 
-##pip install spark-nlp==3.1.0 pyspark==3.1.1
-RUN pip install spark-nlp pyspark
+RUN pip3 install spark-nlp==3.1.1 pyspark==3.1.1
+#RUN pip3 install spark-nlp pyspark 
+RUN pip3 install scikit-spark scikit-learn
 
 # https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-cpu-linux-x86_64-2.3.0.tar.gz
 # https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-gpu-linux-x86_64-2.3.0.tar.gz
